// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SubtractionFileItem /> > should render when [active=%p] false 1`] = `
<Styled(SelectBoxGroupSection)
  active={false}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Attribution
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</Styled(SelectBoxGroupSection)>
`;

exports[`<SubtractionFileItem /> > should render when [active=%p] true 1`] = `
<Styled(SelectBoxGroupSection)
  active={true}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Attribution
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</Styled(SelectBoxGroupSection)>
`;
